fix text align for scatter and remove unnecessary files

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ nav ul{
 
 /* scatter plot screen */
 .scatter-screen {
+  text-align: center;
   padding: 3%;
   display: flex;
   flex-direction: column;
